[package]
name = "bootloader"
version = "0.1.0"
authors = ["mihaimaganu17"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu = { path = "../shared/cpu" }
serial = { path = "../shared/serial" }
rangeset = { path = "../shared/rangeset" }
lockcell = { path = "../shared/lockcell" }

# Solve `eh_personality`
[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
debug = true

[profile.dev]
panic = "abort"
debug = true

